--- a/style.css
+++ b/style.css
@@ -28,26 +28,26 @@ slider{
         slide:nth-child(4){
             left: 0%;
             animation-delay: -1s;
-            background-image: url("1.jpg");
+            background-image: url("images/1.jpg");
             background-size: cover;
             background-position: center;
         }
         slide:nth-child(3){
             animation-delay: 2s;
-            background-image: url("2.jpg");
+            background-image: url("images/2.jpg");
             background-size: cover;
             background-position: center;
         }
         slide:nth-child(2){
             animation-delay: 5s;
-            background-image: url("3.jpg");
+            background-image: url("images/3.jpg");
             background-size: cover;
             background-position: center;
         }
         slide:nth-child(1){
             left: 0%;
             animation-delay: 8s;
-            background-image: url("4.jpg");
+            background-image: url("images/4.jpg");
             background-size: cover;
             background-position: center;
         }
