--- a/style.css
+++ b/style.css
@@ -90,7 +90,6 @@ nav{
     top:0;
     left: 0;
     right: 0;
-    width: 100%;
     height: 60px;
     margin:auto;
     padding: 10px 90px;
@@ -119,6 +118,7 @@ nav .logo p{
 }
 .menu ul{
     float: right;
+    margin-right: 200px;
     list-style: none;
 }
 .menu ul li{
